# DChat-Ncurses

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  dchat-gui  dchat-gui.c  dchat-gui.h
src/.deps/: dchat-gui.Po
